syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;

// The discount service definition .
service DiscountProtoService {
	// CRUD Operations Methods to be exposed as gRPC protocols
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);			// GetDiscountRequest is the request from caller, CouponModel is the response to caller
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message GetDiscountRequest {
	string productName = 1;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}